@@ -1,13 +1,12 @@
 package org.jabref.logic.search;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Stream;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParserResult;
@@ -21,98 +20,81 @@ import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.StandardEntryType;
-import org.jabref.model.groups.GroupHierarchyType;
-import org.jabref.model.groups.SearchGroup;
-import org.jabref.model.pdf.search.PdfSearchResults;
 import org.jabref.model.search.rules.SearchRules;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 import org.jabref.preferences.FilePreferences;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Answers;
 import org.mockito.Mockito;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class SearchFunctionalityTest {
 
-    private BibDatabase database;
-    private PdfSearcher search;
-    private BibDatabaseContext context;
-    private PdfIndexer indexer;
-
-    BibEntry entry1A = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry1A = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry1")
             .withField(StandardField.AUTHOR, "Test")
             .withField(StandardField.TITLE, "cASe");
-    BibEntry entry2A = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry2A = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry2")
             .withField(StandardField.AUTHOR, "test")
             .withField(StandardField.TITLE, "casE");
-    BibEntry entry3A = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry3A = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry3")
             .withField(StandardField.AUTHOR, "tESt")
             .withField(StandardField.TITLE, "Case");
-    BibEntry entry4A = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry4A = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry4")
             .withField(StandardField.AUTHOR, "tesT")
             .withField(StandardField.TITLE, "CASE");
-    BibEntry entry5A = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry5A = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry5")
             .withField(StandardField.AUTHOR, "TEST")
             .withField(StandardField.TITLE, "case");
 
-    BibEntry entry1B = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry1B = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry1")
             .withField(StandardField.AUTHOR, "Test")
             .withField(StandardField.TITLE, "Case");
-    BibEntry entry4B = new BibEntry(StandardEntryType.Misc)
+    private static BibEntry entry4B = new BibEntry(StandardEntryType.Misc)
             .withCitationKey("entry4")
             .withField(StandardField.AUTHOR, "Special")
             .withField(StandardField.TITLE, "192? title.");
 
-    BibEntry minimal1 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal1");
-    BibEntry minimal2 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal2");
-    BibEntry minimal3 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal3");
-    BibEntry minimalNote1 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal-note1");
-    BibEntry minimalNote2 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal-note2");
-    BibEntry minimalNote3 = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("minimal-note3");
+    private static BibEntry minimal1 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal1")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimal", "minimal.pdf", StandardFileType.PDF.getName())));
+    private static BibEntry minimal2 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal2")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimal 1", "minimal1.pdf", StandardFileType.PDF.getName())));
+    private static BibEntry minimal3 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal3")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimal 2", "minimal2.pdf", StandardFileType.PDF.getName())));
+    private static BibEntry minimalNote1 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal-note1")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimalnote", "minimal-note.pdf", StandardFileType.PDF.getName())));
+    private static BibEntry minimalNote2 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal-note2")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimalnote 1", "minimal-note1.pdf", StandardFileType.PDF.getName())));
+    private static BibEntry minimalNote3 = new BibEntry(StandardEntryType.Misc)
+            .withCitationKey("minimal-note3")
+            .withFiles(Collections.singletonList(new LinkedFile("Minimalnote 2", "minimal-note2.pdf", StandardFileType.PDF.getName())));
 
-    BibEntry entry1D = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("entry1")
-            .withField(StandardField.AUTHOR, "Test")
-            .withField(StandardField.TITLE, "Case")
-            .withField(StandardField.GROUPS, "A");
-    BibEntry entry2D = new BibEntry(StandardEntryType.Misc)
-            .withCitationKey("entry2")
-            .withField(StandardField.AUTHOR, "TEST")
-            .withField(StandardField.TITLE, "CASE")
-            .withField(StandardField.GROUPS, "A");
+    private PdfSearcher search;
+    private PdfIndexer indexer;
 
     @BeforeEach
     public void setUp(@TempDir Path indexDir) throws IOException {
         FilePreferences filePreferences = mock(FilePreferences.class);
-        database = new BibDatabase();
-        context = mock(BibDatabaseContext.class);
-
-        minimal1.setFiles(Collections.singletonList(new LinkedFile("Minimal", "minimal.pdf", StandardFileType.PDF.getName())));
-        minimal2.setFiles(Collections.singletonList(new LinkedFile("Minimal 1", "minimal1.pdf", StandardFileType.PDF.getName())));
-        minimal3.setFiles(Collections.singletonList(new LinkedFile("Minimal 2", "minimal2.pdf", StandardFileType.PDF.getName())));
-        minimalNote1.setFiles(Collections.singletonList(new LinkedFile("Minimalnote", "minimal-note.pdf", StandardFileType.PDF.getName())));
-        minimalNote2.setFiles(Collections.singletonList(new LinkedFile("Minimalnote 1", "minimal-note1.pdf", StandardFileType.PDF.getName())));
-        minimalNote3.setFiles(Collections.singletonList(new LinkedFile("Minimalnote 2", "minimal-note2.pdf", StandardFileType.PDF.getName())));
+        BibDatabase database = new BibDatabase();
+        BibDatabaseContext context = mock(BibDatabaseContext.class);
 
         when(context.getFileDirectories(Mockito.any())).thenReturn(Collections.singletonList(Path.of("src/test/resources/org/jabref/logic/search")));
         when(context.getFulltextIndexPath()).thenReturn(indexDir);
@@ -126,112 +108,59 @@ public class SearchFunctionalityTest {
         indexer.addToIndex(context);
     }
 
-    private void initializeDatabaseFromPath(Path testFile) throws IOException {
+    private BibDatabase initializeDatabaseFromPath(String testFile) throws Exception {
+        return initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource(testFile)).toURI()));
+    }
+
+    private BibDatabase initializeDatabaseFromPath(Path testFile) throws Exception {
         ParserResult result = new BibtexImporter(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS), new DummyFileUpdateMonitor()).importDatabase(testFile);
-        context = new BibDatabaseContext(result.getDatabase(), result.getMetaData());
-
-        database = context.getDatabase();
+        BibDatabaseContext context = new BibDatabaseContext(result.getDatabase(), result.getMetaData());
+        BibDatabase database = context.getDatabase();
         search = PdfSearcher.of(context);
-
         indexer.addToIndex(context);
+        return database;
     }
 
-    @Test
-    public void testEmptyLibrarySearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("empty.bib")).toURI()));
+    private static Stream<Arguments> searchLibrary() {
+        return Stream.of(
+                Arguments.of(List.of(), "empty.bib", "Test", EnumSet.noneOf(SearchRules.SearchFlags.class)),
 
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("Test", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
+                Arguments.of(List.of(), "test-library-A.bib", "Best", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+                Arguments.of(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), "test-library-A.bib", "Test", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+
+                Arguments.of(List.of(), "test-library-A.bib", "author=Case", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+                Arguments.of(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), "test-library-A.bib", "author=Test", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+
+                Arguments.of(List.of(), "test-library-A.bib", "author=Test and title=Test", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+                Arguments.of(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), "test-library-A.bib", "author=Test and title=Case", EnumSet.noneOf(SearchRules.SearchFlags.class)),
+
+                Arguments.of(List.of(), "test-library-A.bib", "TesT", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)),
+                Arguments.of(List.of(entry1A), "test-library-A.bib", "Test", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)),
+
+                Arguments.of(List.of(), "test-library-A.bib", "author=Test and title=case", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)),
+                Arguments.of(List.of(entry1A), "test-library-A.bib", "author=Test and title=cASe", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)),
+
+                Arguments.of(List.of(), "test-library-B.bib", "[/8]", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION)),
+                Arguments.of(List.of(entry4B), "test-library-B.bib", "[/9]", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION)),
+
+                Arguments.of(List.of(), "test-library-B.bib", "\\bCas\\b", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION, SearchRules.SearchFlags.CASE_SENSITIVE)),
+                Arguments.of(List.of(entry1B), "test-library-B.bib", "\\bCase\\b", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION, SearchRules.SearchFlags.CASE_SENSITIVE))
+        );
     }
 
-    @Test
-    public void testUpperAndLowerWordSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-A.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("Test", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("Best", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
+    @ParameterizedTest
+    @MethodSource
+    public void searchLibrary(List<BibEntry> expected, String testFile, String query, EnumSet<SearchRules.SearchFlags> searchFlags) throws Exception {
+        BibDatabase database = initializeDatabaseFromPath(testFile);
+        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery(query, searchFlags), database).getMatches();
+        assertEquals(expected, matches);
     }
 
-    @Test
-    public void testSimpleSingleFieldSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-A.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("author=Test", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("author=Case", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
-    @Test
-    public void testSimpleMultipleFieldSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-A.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("author=Test and title=Case", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(List.of(entry1A, entry2A, entry3A, entry4A, entry5A), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("author=Test and title=Test", EnumSet.noneOf(SearchRules.SearchFlags.class)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
-    @Test
-    public void testSensitiveWordSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-A.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("Test", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(List.of(entry1A), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("TesT", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
-    @Test
-    public void testSensitiveMultipleFieldSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-A.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("author=Test and title=cASe", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(List.of(entry1A), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("author=Test and title=case", EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
-    @Test
-    public void testSimpleRegularExpression() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-B.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("[/9]", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION)), database).getMatches();
-        assertEquals(List.of(entry4B), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("[/8]", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
-    @Test
-    public void testSensitiveRegularExpression() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-B.bib")).toURI()));
-
-        //Positive search test
-        List<BibEntry> matches = new DatabaseSearcher(new SearchQuery("\\bCase\\b", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION, SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(List.of(entry1B), matches);
-        //Negative search test
-        matches = new DatabaseSearcher(new SearchQuery("\\bCas\\b", EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION, SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
-    }
-
+    ;
 /*
     @Test
-    public void testSimplePDFFulltextSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib")).toURI()));
+    public void testSimplePDFFulltextSearch() throws Exception {
+        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib");
 
         //@Test uses PDFReader
 
@@ -244,8 +173,8 @@ public class SearchFunctionalityTest {
     }
 
     @Test
-    public void testSimplePDFNoteFulltextSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib")).toURI()));
+    public void testSimplePDFNoteFulltextSearch() throws Exception {
+        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib");
 
         //@Test uses PDFReader
 
@@ -258,8 +187,8 @@ public class SearchFunctionalityTest {
     }
 
     @Test
-    public void testSensitivePDFFulltextSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib")).toURI()));
+    public void testSensitivePDFFulltextSearch() throws Exception {
+        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib");
 
         //@Test uses DatabaseSearcher
 
@@ -268,12 +197,12 @@ public class SearchFunctionalityTest {
         assertEquals(List.of(minimal1, minimalNote1), matches);
         //Negative search test
         matches = new DatabaseSearcher(new SearchQuery("This is a test.", EnumSet.of(SearchRules.SearchFlags.FULLTEXT, SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
+        assertEquals(List.of(), matches);
     }
 
     @Test
-    public void testSensitivePDFNoteFulltextSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib")).toURI()));
+    public void testSensitivePDFNoteFulltextSearch() throws Exception {
+        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-C.bib");
 
         //@Test uses DatabaseSearcher
 
@@ -282,25 +211,9 @@ public class SearchFunctionalityTest {
         assertEquals(List.of(minimalNote1), matches);
         //Negative search test
         matches = new DatabaseSearcher(new SearchQuery("User Test", EnumSet.of(SearchRules.SearchFlags.FULLTEXT, SearchRules.SearchFlags.CASE_SENSITIVE)), database).getMatches();
-        assertEquals(Collections.emptyList(), matches);
+        assertEquals(List.of(), matches);
     }
 */
-    @Test
-    public void testSimpleGroupSearch() throws IOException, URISyntaxException {
-        initializeDatabaseFromPath(Path.of(Objects.requireNonNull(SearchFunctionalityTest.class.getResource("test-library-D.bib")).toURI()));
-        SearchGroup groupPositive = new SearchGroup("A", GroupHierarchyType.INDEPENDENT, "Test", EnumSet.noneOf(SearchRules.SearchFlags.class));
-        SearchGroup groupNegative = new SearchGroup("A", GroupHierarchyType.INDEPENDENT, "Unknown", EnumSet.noneOf(SearchRules.SearchFlags.class));
-
-        List<BibEntry> positiveResult = new ArrayList<>();
-
-        positiveResult.add(entry1D);
-        positiveResult.add(entry2D);
-
-        //Positive search test
-        assertTrue(groupPositive.containsAll(positiveResult));
-        //Negative search test
-        assertFalse(groupNegative.containsAll(positiveResult));
-    }
 }
 
 
